--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link href="https://fonts.googleapis.com/css2?family=Bitter&family=Dancing+Script&family=Handjet:wght@700&family=Space+Grotesk:wght@300&family=Work+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&family=Bitter&family=Dancing+Script&family=Handjet:wght@700&family=Space+Grotesk:wght@300&family=Work+Sans&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aubrey's Portfolio</title>
   </head>
